--- a/20240329_AIPython.ipynb
+++ b/20240329_AIPython.ipynb
@@ -52,7 +52,7 @@
         "m = minute % 60\n",
         "\n",
         "# print result\n",
-        "print(\"{0}시간 {1}분\".format(h, m))"
+        "print(\"{:d} -> {:d}시간 {:d}분".format(minute, h, m))"
       ]
     },
     {
